; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netgraph/bluetooth/socket/extr_ng_btsocket_sco.c_ng_btsocket_sco_disconnect.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netgraph/bluetooth/socket/extr_ng_btsocket_sco.c_ng_btsocket_sco_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.TYPE_6__ = type { i64, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@ng_btsocket_sco_node = common dso_local global i32* null, align 8
@NG_BTSOCKET_SCO_DISCONNECTING = common dso_local global i64 0, align 8
@EINPROGRESS = common dso_local global i32 0, align 4
@NG_BTSOCKET_SCO_TIMO = common dso_local global i32 0, align 4
@NG_BTSOCKET_SCO_OPEN = common dso_local global i64 0, align 8
@NG_BTSOCKET_SCO_CLOSED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ng_btsocket_sco_disconnect(%struct.socket* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.socket*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  store %struct.socket* %0, %struct.socket** %3, align 8
  %5 = load %struct.socket*, %struct.socket** %3, align 8
  %6 = call %struct.TYPE_6__* @so2sco_pcb(%struct.socket* %5)
  store %struct.TYPE_6__* %6, %struct.TYPE_6__** %4, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = icmp eq %struct.TYPE_6__* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @EINVAL, align 4
  store i32 %10, i32* %2, align 4
  br label %66

11:                                               ; preds = %1
  %12 = load i32*, i32** @ng_btsocket_sco_node, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = load i32, i32* @EINVAL, align 4
  store i32 %15, i32* %2, align 4
  br label %66

16:                                               ; preds = %11
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 2
  %19 = call i32 @mtx_lock(i32* %18)
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @NG_BTSOCKET_SCO_DISCONNECTING, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %30

25:                                               ; preds = %16
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 2
  %28 = call i32 @mtx_unlock(i32* %27)
  %29 = load i32, i32* @EINPROGRESS, align 4
  store i32 %29, i32* %2, align 4
  br label %66

30:                                               ; preds = %16
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* @NG_BTSOCKET_SCO_TIMO, align 4
  %35 = and i32 %33, %34
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %40

37:                                               ; preds = %30
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %39 = call i32 @ng_btsocket_sco_untimeout(%struct.TYPE_6__* %38)
  br label %40

40:                                               ; preds = %37, %30
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = load i64, i64* @NG_BTSOCKET_SCO_OPEN, align 8
  %45 = icmp eq i64 %43, %44
  br i1 %45, label %46, label %56

46:                                               ; preds = %40
  %47 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %48 = call i32 @ng_btsocket_sco_send_lp_discon_req(%struct.TYPE_6__* %47)
  %49 = load i64, i64* @NG_BTSOCKET_SCO_DISCONNECTING, align 8
  %50 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 0
  store i64 %49, i64* %51, align 8
  %52 = load %struct.socket*, %struct.socket** %3, align 8
  %53 = call i32 @soisdisconnecting(%struct.socket* %52)
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %55 = call i32 @ng_btsocket_sco_timeout(%struct.TYPE_6__* %54)
  br label %62

56:                                               ; preds = %40
  %57 = load i64, i64* @NG_BTSOCKET_SCO_CLOSED, align 8
  %58 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %59 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %58, i32 0, i32 0
  store i64 %57, i64* %59, align 8
  %60 = load %struct.socket*, %struct.socket** %3, align 8
  %61 = call i32 @soisdisconnected(%struct.socket* %60)
  br label %62

62:                                               ; preds = %56, %46
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %64 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %63, i32 0, i32 2
  %65 = call i32 @mtx_unlock(i32* %64)
  store i32 0, i32* %2, align 4
  br label %66

66:                                               ; preds = %62, %25, %14, %9
  %67 = load i32, i32* %2, align 4
  ret i32 %67
}

declare dso_local %struct.TYPE_6__* @so2sco_pcb(%struct.socket*) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @ng_btsocket_sco_untimeout(%struct.TYPE_6__*) #1

declare dso_local i32 @ng_btsocket_sco_send_lp_discon_req(%struct.TYPE_6__*) #1

declare dso_local i32 @soisdisconnecting(%struct.socket*) #1

declare dso_local i32 @ng_btsocket_sco_timeout(%struct.TYPE_6__*) #1

declare dso_local i32 @soisdisconnected(%struct.socket*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
